style/main.css
:root{
    --mint:#B9D9C3;
    --toasted:#FBCB7B;
    --tomato:#EB5E30;
    --ceramic:#CDCDC0;
    --navbar-col:#E7717D;
}

* {
  box-sizing: border-box;
}

body{
    padding: 0;
}

.container-fluid{
    padding: 0;
}


/*Navigation Bar*/
.navbar{
    background-color: #212121;
    box-shadow: 0px 3px 15px #212121;
    transition: all 0.5s;
}

.navbar-brand{
    font-weight: bold;
    transition: all 0.5s;
}
 
.navbar-white{
    background-color: #fefefe;
    box-shadow: 0px 3px 15px #212121;
}

.navbrand-dark{
    color: #212121 !important;
    font-weight: bold;
}

.navlink-dark{
    color: #212121 !important;
}

.toggler-dark{
    color: #212121;
}

.navbar-collapse{
    justify-content: flex-end;
    margin-right: 2%;
    
}

.navbar-dark .navbar-nav .nav-link{
    padding-left: 1em;
    padding-right: 1em;
}


/*Jumbotron*/
.jumbotron{
    height: 650px;
    background-image: url(../images/header_image.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    padding-bottom: 70px;
}

.jumbotron-text{
    font-size: 2em;
    text-align: center;
    color: white;  
}

.jumbotron-text h1{
    font-size: 3em;
    text-transform: uppercase;
    padding-top: 150px;
    margin-bottom: 0;
}

.jumbotron-text p{
    font-weight: 600;
}

/*Social Links*/
.ul-social{
    text-align:center;
    margin: 0;
    
}

.ul-social li{
    list-style: none;
    display: inline-block;
}

.social{
   color: white;
    font-size: 2.5em;
    padding: 20px;
}

.social:hover{
    color: #888;
}

.typed-cursor {
    display: none;
}

/*ARROW LINK*/
.down-arrow {
    margin-top: auto;
    text-align: center;
    margin-top: 50px;
    margin-bottom: 50px;
    animation: vertical_motion 1s linear infinite;
}

@keyframes vertical_motion{
    0% , 100%{
        margin-top: 50px
    }
    
    50% {
        margin-top: 100px;
    }
}

.down-arrow a{
    color: #fff;
    font-size: 1.5em;
}


/*About Me*/
.about{
    margin-bottom: 30px;
    justify-content: center;
}

.about img{
    box-shadow: 5px 5px 10px #AAA;
}


.about-text{
    line-height: 2em
}

.section-topic{
    position: relative;

}

.section-topic:after{
    content: '';
    position: absolute;
    top: 100%;
    left: 50%;
    width: 10%;
    border: 2px solid #d0d0d0;
    box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
    transform: translateX(-50%);
    margin-top: 10px;
}

.about-text h2{
    text-transform: uppercase;
}

/*My Services*/
.services{
    padding-top: 30px;
    padding-bottom: 30px;
    background-color: #FFEBC9;
    overflow: hidden;
}

.service{
    background-color: white;
    padding: 10px;
    border-radius: 10px;
    box-shadow: 3px 3px 5px #ccc;
    margin: 20px;
}

.services h2{
    text-align: center;
    margin-bottom: 20px;
}

.services img{
    margin: auto;
    margin-bottom: 20px;
    height: 300px;
    width: 100%;
}


.service-title{
    font-size: 1.2em;
    text-align: center;
    font-weight: bold;
}

.services p{
    text-align: center;
}


/*My Projects*/
.projects{
    padding-top: 30px;
    padding-bottom: 30px;
    background-color: #ced2ae;
}


.projects h2{
    text-align: center;
    margin-bottom: 30px;
    color:#212121;
}

.project{
    margin-bottom: 30px;
}

.project img{
    width: 180px;
    height: 320px;
}


/*My Skills*/
.skills{
    padding-top: 30px;
    padding-bottom: 30px;
}

.skills h3{
    text-align: center;
    margin-bottom: 30px;
}

.skills-row{
    justify-content: space-between;
}

.skill-item{
     padding: 10px;
    border-radius: 10px;
    box-shadow: 3px 3px 5px #ccc;
    margin: 20px;
}

.skills img{
    width: 100%;
    height: 150px;
    margin: auto;
    display: block;
    margin-bottom: 10px;
}

.skills p{
    text-align: center;
    font-size: 1.3em;
    font-weight: 600;
}


/*Contact Me*/
.contact-me{
    background-image: url(../images/header_image.jpg);
    height: 470px;
    background-attachment: fixed;
    background-position:center;
    background-repeat: no-repeat;
    background-size: cover;
    padding-top: 30px;
    padding-bottom: 30px;
}

.contact-me h3{
    color: #fefefe;
    text-align: center;
    margin-bottom: 30px;
}

.contact-me form{
    width: 50%;
    margin: auto;
    color: #fefefe;
}

.contact-me textarea{
    resize: none;
    margin-bottom: 10px;
}

.form-error{
    color: red;
    font-weight: 600;
}

.form-success{
    color: green;
    font-weight: 600;
}

#submit-btn{
    background-color: #212121;
    transition: all 0.5s;
    border: none;
    box-shadow: 3px 3px 6px #111;
}

#submit-btn:hover{
    background-color: #fff;
    color: #212121;
}


/*Footer*/
footer{
    background-color: #414141;
    color: white;
    padding-top: 30px;
    padding-bottom: 30px;
}

.footer-social{
    color: white;
    padding: 20px;
}


/*Media Queries*/
@media(max-width:991px){
    .about{
        justify-content: space-between;
    }
}

@media(max-width:768px){
    
    
    
    .about{
        text-align: center;    
    }
    
    .about img{
        display: block;
        margin: auto;
        margin-bottom: 20px;
    }
    
    .project img{
        display: block;
        margin: auto;
    }
    
    .project h3{
        text-align: center;
        margin-top: 10px;
        
    }
    
    .skills-row{
        justify-content: center;
    }
    
    .skill-item{
        
    }
    
    .contact-me{
        background-attachment: scroll;
        height: 500px;
    }
    
}

